Remove Operator + impl